# parameters

./: CMakeLists.txt  LICENSE.txt
example/: example_parameter.cpp
example/example_qt_ui/include/: mainwindow.h
example/example_qt_ui/src/: mainwindow.cpp
include/: ITypedParameter.hpp  InputParameter.hpp  LokiTypeInfo.h  MetaParameter.hpp  Parameter.hpp  Parameter_def.hpp  Parameters.hpp  TypedInputParameter.hpp  TypedParameter.hpp  Types.hpp  parameters.hpp
include/Converters/: ConverterPolicy.hpp  DoubleConverter.hpp
include/Persistence/: OpenCV.hpp  Persistence.hpp  TextSerializer.hpp
include/UI/: InterThread.hpp  Qt.hpp  UI.hpp
include/parameters/: BufferProxy.hpp  Demangle.hpp  IRangedParameter.hpp  ITypedParameter.hpp  IVariableManager.h  InputParameter.hpp  MetaParameter.hpp  Parameter.hpp  ParameterBuffer.hpp  ParameterFactory.hpp  Parameter_def.hpp  ParameteredObject.h  ParameteredObjectImpl.hpp  Parameters.hpp  RangedParameter.hpp  TypedInputParameter.hpp  TypedParameter.hpp  Types.hpp  VariableManager.h  type.h
include/parameters/Converters/: ConverterPolicy.hpp  DoubleConverter.hpp
include/parameters/Persistence/: CerealPolicy.hpp  OpenCV.hpp  Persistence.hpp  ProtobufSerializer.hpp  TextSerializer.hpp  cereal.hpp  parameter.pb.h
include/parameters/Persistence/detail/: CerealPolicyImpl.hpp
include/parameters/UI/: InterThread.hpp  Qt.hpp  UI.hpp
include/parameters/UI/Qt/: Containers.hpp  DefaultHandler.hpp  DefaultProxy.hpp  IHandler.hpp  IParameterProxy.hpp  OpenCV.hpp  POD.hpp  ParameterProxy.hpp  SignalProxy.hpp  UiUpdateHandler.hpp
include/parameters/buffers/: BufferProxy.hpp  CircularBuffer.hpp  ConstMap.hpp  IBuffer.hpp  map.hpp  proxy.hpp
protobuf/: parameter.proto
src/: BufferProxy.cpp  Instantiations.cpp  Instantiations_1.cpp  Instantiations_2.cpp  Parameter.cpp  ParameterFactory.cpp  ParameteredObject.cpp  Parameters.cpp  VariableManager.cpp  cvInstantiations.cpp  cvInstantiations_1.cpp  cvInstantiations_2.cpp  type.cpp  vecInstantions.cpp
src/Converters/: DoubleConverter.cpp
src/Persistence/: OpenCV.cpp  ProtobufSerializer.cpp  TextSerializer.cpp  cereal.cpp
src/UI/: Qt.cpp  Ui.cpp
src/UI/Qt/: DefautlProxy.cpp  IHandler.cpp  IParameterProxy.cpp  SignalProxy.cpp
test/: parameter_test.cpp  parametered_object.cpp  serialization.cpp  serialization_vec.cpp
test/qt_policy_test/include/: mainwindow.h
test/qt_policy_test/src/: mainwindow.cpp
